fixed breadcrumbs alignment

--- a/css/epfl.css
+++ b/css/epfl.css
@@ -101,6 +101,8 @@ blockquote p {
 .showall .icon {background-position: -120px -24px; }
 .showall:hover .icon {background-position: -120px 0; }
 
+.read-more { background: url("../img/arrow_more.png") no-repeat 0 0; width: 16px; height: 15px; }
+
 /******************* Header definition ***********************/
 #header{ margin-left: auto; margin-right: auto; width: 980px; padding: 0 8px; background-color: #fff;}
 #header a{ background: none; }
